2008-10-27  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/structure.generators.R
	(graph.full.bipartite) : added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/print.R (print.igraph) : quote symbolic
	vertex names by default

	* interfaces/R/igraph/R/structural.properties.R (shortest.paths)
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	make it possible to choose shortest path algorithm by hand
	
	* interfaces/R/src/rinterface.c.in (R_igraph_shortest_paths) :
	call Johnson's algorithm, if appropriate

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks) : 
	add 'cutsetAlgorithm' argument

	* interfaces/R/igraph/R/flow.R (igraph.mincut) : report error 
	if (unimplemented) s-t minimum cut is requested

2008-08-20  Gabor Csardi  <csardi@szaffi>

	* interface/R/igraph/R/conversion.R (get.adjacency.sparse) : 
	fixed a bug, when graph.adjacency.sparse is called with 
	a named graph

2008-07-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected a bug 
	when using multiple vertex shapes

2008-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness)
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : 
	add support for weights

2008-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness) : added 
	progress bar support
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : added
	progress bar support

2008-06-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	'sparse' option added

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	several bugs corrected
	
2008-06-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (get.adjacency) : 'sparse' 
	argument added

2008-06-20  Gabor Csardi  <csardi@rmki.kfki.hu>
